# assu-parser

./: .gitignore  Cargo.toml  README.md
sprity-aseprite/: Cargo.toml
sprity-aseprite/src/: lib.rs  loader.rs  make_image.rs  tests.rs  wrappers.rs
sprity-aseprite/src/binary/: chunk.rs  errors.rs  header.rs  image.rs  mod.rs  palette.rs  scalars.rs
sprity-aseprite/src/binary/chunks/: cel.rs  cel_extra.rs  color_profile.rs  layer.rs  slice.rs  tags.rs  tileset.rs  user_data.rs
sprity-aseprite/tests/: debug.rs  integration_tests.rs  userdata.aseprite
sprity-aseprite/tests/aseprite_files/: linkedcells.aseprite
src/: lib.rs  output.rs
src/binary/: palette.rs  raw_frame.rs
src/binary/chunks/: external_files.rs  layer.rs  mask.rs  palette.rs  tags.rs  user_data.rs
tests/: debug.rs  integration_tests.rs
tests/aseprite_files/: tags.aseprite
tests/generated_pngs/: dump.txt
